nginx-ic/wildcard-routing/wildcard-ing-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wildcard-ingress
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: "devbinx.com"
    http:
      paths:
      - path: /account
        pathType: Prefix
        backend:
          service:
            name: demo-svc-account
            port:
              number: 80
  - host: "*.devbinx.com"
    http:
      paths:
      - path: /menu
        pathType: Prefix
        backend:
          service:
            name: demo-svc-menu
            port:
              number: 80
